# vivian_cli

./: .dockerignore  .gitignore  Dockerfile  README.md  Task.py  Tool.py  __init__.py  cli_main.py  costHook.py  cost_tracker.py  docker-compose.yml  install.ps1  install.sh  projectOnboardingState.py  pyproject.toml  query_engine.py  vivian.bat
-code-vivian_cli/: efb1585a-c2a8-4736-a568-96495d9cf03a.jsonl
api/: __init__.py  client.py
apps/: __init__.py
assistant/: sessionHistory.py
bootstrap/: state.py
bridge/: __init__.py  bridgeApi.py  bridgeConfig.py  bridgeDebug.py  bridgeEnabled.py  bridgeMain.py  bridgeMessaging.py  bridgePermissionCallbacks.py  bridgePointer.py  bridgeStatusUtil.py  bridgeUI.py  capacityWake.py  codeSessionApi.py  createSession.py  debugUtils.py  envLessBridgeConfig.py  flushGate.py  inboundAttachments.py  inboundMessages.py  initReplBridge.py  jwtUtils.py  manager.py  pollConfig.py  pollConfigDefaults.py  remoteBridgeCore.py  replBridge.py  replBridgeHandle.py  replBridgeTransport.py  sessionIdCompat.py  sessionRunner.py  trustedDevice.py  types.py  workSecret.py
buddy/: __init__.py  buddy_notification.py  companion.py  companion_sprite.py  prompt.py  sprites.py  types.py
cli/: __init__.py  exit.py  ndjson.py  remote_io.py  structured_io.py  update.py
commands/: __init__.py  advisor.py  all_commands.py  app.py  bridge_kick.py  brief.py  commit.py  commit_push_pr.py  createMovedToPluginCommand.py  init.py  init_verifiers.py  insights.py  install.py  limits.py  registry.py  review.py  security_review.py  session_memory.py  team_memory.py  tip.py  token_count.py  ultraplan.py  version.py
components/: App.py  ConfigurableShortcutHint.py  FallbackToolUseRejectedMessage.py  FilePathLink.py  HistorySearchDialog.py  InterruptedByUser.py  LanguagePicker.py  MessageResponse.py  OutputStylePicker.py  PressEnterToContinue.py  RemoteCallout.py  SearchBox.py  Spinner.py  TextInput.py  ThemePicker.py  ThinkingToggle.py  __init__.py
constants/: __init__.py  apiLimits.py  betas.py  common.py  cyberRiskInstruction.py  errorIds.py  figures.py  files.py  github_app.py  keys.py  messages.py  oauth.py  outputStyles.py  product.py  prompts.py  spinnerVerbs.py  system.py  systemPromptSections.py  toolLimits.py  tools.py  turnCompletionVerbs.py  xml.py
context/: __init__.py  fpsMetrics.py  mailbox.py  modalContext.py  notifications.py  stats.py  voice.py
coordinator/: __init__.py  coordinatorMode.py
desktop_webgui/: __init__.py  server.py
entrypoints/: __init__.py  agentSdkTypes.py  cli.py  init.py  (+2 more)
(+1778 files in other folders)
